[package]
name = "my-no-sql-core"
version = "0.1.1"
edition = "2021"

[features]
default = []
row_expiration = []
row_expiration_read_only = []
table_attributes = []
no_table_attributes = []
db_row_last_read_access = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-json = { branch = "0.1.0", git = "https://github.com/MyJetTools/my-json.git" }
rust-extensions = { branch = "0.1.0", git = "https://github.com/MyJetTools/rust-extensions.git" }
tokio = { version = "*", features = ["full"] }
