[package]
name = "my-no-sql-core"
version = "0.2.0"
edition = "2021"

[features]
default = []
master-node = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-json = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-json.git" }
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
tokio = { version = "*", features = ["full"] }
